tests/ui/rfc-1937-termination-trait/issue-103052-1.stderr
error[E0277]: the trait bound `Something: Termination` is not satisfied
  --> $DIR/issue-103052-1.rs:10:13
   |
LL |     receive(Something);
   |     ------- ^^^^^^^^^ the trait `Termination` is not implemented for `Something`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `receive`
  --> $DIR/issue-103052-1.rs:5:20
   |
LL | fn receive(_: impl std::process::Termination) {}
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `receive`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
